<resources>
    <string name="app_name">Grupo Caravana</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña (optional)</string>
    <string name="action_sign_in">Inicia Sesion o Registrate</string>
    <string name="action_sign_in_short">Inicia Sesion</string>
    <string name="error_invalid_username">El usuario debe tener mas de 6 caracteres</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_incorrect_credentials">Las credenciales son incorrectas.</string>
    <string name="error_field_required">Llene todos los campos</string>
    <string name="permission_rationale">"Se necesita permiso sobre tus contactos."
    </string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_register">Registrarse</string>

    <!--STRINGS PARA LOS LABELS DEL NAVEGATION MENU -->
    <string name="title_home">Radio</string>
    <string name="title_emisoras">Emisoras</string>
    <string name="title_ciudad">Ciudad</string>
    <string name="title_concursos">Concursos</string>
    <string name="title_encuestas">Encuestas</string>
    <string name="title_navigation">Menú</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_sugerencias">Sugerencias</string>
    <string name="title_notificaciones">Notificaciones</string>
    <string name="title_favoritos">Favoritos</string>
    <string name="title_noticias">Noticias</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--STRING PARA VENTANA DE LOGIN-->

    <string name="text_login">Iniciar sesíon</string>
    <string name="text_concursar">CONCURSAR</string>
    <string name="text_votar">VOTAR</string>
    <string name="text_chat">Escribe un mensaje...</string>
    <string name="text_log_fb">INICIA CON FACEBOOK</string>
    <string name="text_log_tw">INICIA CON TWITTER</string>
    <string name="text_log_Google">INICIA CON GOOGLE</string>
    <string name="text_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="text_enter_with">Ingresar con</string>
    <string name="text_register">No tienes cuenta?</string>
    <string name="text_register_here">¿Usuario Nuevo? Regístrese Ahora</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_loading">Cargando....</string>

    <!--STRING PARA API DE LOGIN DE FB-->
    <string name="facebook_app_id">766740600384378</string>
    <string name="fb_login_protocol_scheme">fb766740600384378</string>


    <!--STRING PARA VENTANA DE REGISTRO-->
    <string name="text_tittle_create_acc">"Crear Cuenta"</string>
    <string name="btn_next">"Siguiente"</string>


    <string name="text_obligatory_fields">Campos Obligatorios *</string>
    <string name="text_names">Nombres</string>
    <string name="text_lastname">Apellidos</string>
    <string name="text_user">Escribe un nombre de usuario</string>
    <string name="text_password">Escribe una contraseña</string>
    <string name="text_mail">¿Cuál es tu correo electrónico?</string>
    <string name="text_number">¿Cual es tu número de celular?</string>
    <string name="text_birthday">¿Cuál es tu fecha de nacimiento?</string>
    <string name="text_register_btn">Regístrarme</string>
    <string name="text_day">Día</string>
    <string name="text_month">Mes</string>
    <string name="text_year">Año</string>


    <string name="hint_names_lastnames">Nombres</string>
    <string name="hint_lastnames">Apellidos</string>
    <string name="hint_user">Nombre de usuario</string>
    <string name="hint_mail">Correo electrónico</string>
    <string name="hint_password_register">Contraseña</string>
    <string name="hint_phone_number">Numero de teléfono</string>
    <string name="hint_birthday">DD-MM-AAAA</string>


    <!--STRING PARA VENTANA DE REGISTRO-->
    <string name="text_tittle_forgot_password">Resetear Contraseña</string>
    <string name="text_btn_send">Enviar</string>

    <string-array name="array_days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="array_months">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="array_years">
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </string-array>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>
