<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".Activities.ForgotPasswordActivity">
    android:background="@color/bgColor"
    android:padding="10dp"
    tools:context=".Activities.RegisterOneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/text_tittle_forgot_password"
            android:textColor="@color/text_color"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linear_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/text_mail"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/editText_email_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_round_button"
                android:ems="10"
                android:hint="@string/hint_mail"
                android:inputType="textPersonName"
                android:padding="3dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/text_btn_send"
            tools:textAllCaps="false" />

    </LinearLayout>
</RelativeLayout>